--- a/stylematters_v3/style.css
+++ b/stylematters_v3/style.css
@@ -1,8 +1,8 @@
 /*
-THEME NAME: StyleMatters v2.0
+THEME NAME: StyleMatters v3.0
 THEME URI:
 DESCRIPTION: Theme for StyleMatters.
-VERSION: 2.1
+VERSION: 3.1
 AUTHOR: Aaron Pedersen
 AUTHOR URI:
 TAGS: StyleMatters, DJs
@@ -31,6 +31,27 @@ body {
 	background-color: #000;
 	overflow: hidden;
 	float: left;
+}
+
+.transition-2 {
+	-webkit-transition: all 0.2s ease-in-out;
+	-moz-transition: all 0.2s ease-in-out;
+	-ms-transition: all 0.2s ease-in-out;
+	transition: all 0.2s ease-in-out;
+}
+
+.transition-5 {
+	-webkit-transition: all 0.5s ease-out;
+	-moz-transition: all 0.5s ease-out;
+	-ms-transition: all 0.5s ease-out;
+	transition: all 0.5s ease-out;
+}
+
+.transition-10 {
+	-webkit-transition: all 1.0s ease-out;
+	-moz-transition: all 1.0s ease-out;
+	-ms-transition: all 1.0s ease-out;
+	transition: all 1.0s ease-out;
 }
 
 .hide{
@@ -108,6 +129,29 @@ strong {
 	font-size: inherit;
 	font-weight: bold;
 }
+
+
+/* =================================
+CLEARFIX
+===================================*/
+.clearfix:after {
+	content: ".";
+	display: block;
+	clear: both;
+	visibility: hidden;
+	line-height: 0;
+	height: 0;
+}
+.clearfix {
+	display: inline-block;
+}
+html[xmlns] .clearfix {
+	display: block;
+}
+* html .clearfix {
+	height: 1%;
+}
+
 
 /*----------- header -------------*/
 
@@ -348,9 +392,9 @@ strong {
 	padding-left: 44px;
 }
 
-/*-------------------------
+/*====================================================
 NEW DEEJAY SLIDESHOW
---------------------------*/
+====================================================*/
 #deejay-gallery{
 	width:856px;
 	height:458px;
@@ -358,7 +402,14 @@ NEW DEEJAY SLIDESHOW
 	display: block;
 	margin-left:51px;
 	overflow: hidden;
+	position: relative;
 	}
+	#deejay-gallery ul{
+		padding: 0;
+		margin: 0;
+		list-style: none;
+		overflow: hidden;
+		}
 #slide-wrap-3,
 #slide-wrap-1{
 	width: 231px;
@@ -384,7 +435,76 @@ NEW DEEJAY SLIDESHOW
 .slide-container{
 	position:absolute;
 	}
+	.slide-container li{
+		position: absolute;
+		top:0;
+		left:0;
+		width: 100%;
+		height: 100%;
+		}
 
+/* horizontal */
+#slide-wrap-1 img,
+#slide-wrap-2 img,
+#slide-wrap-3 img{
+	max-height: 100%;
+	width: auto;
+	}
+/* vertical */
+#slide-wrap-4 img,
+#slide-wrap-5 img,
+#slide-wrap-7 img{
+	max-width: 100%;
+	height: auto;
+	}
+#slide-wrap-1{
+	border-right:1px solid #fff;
+	border-bottom:1px solid #fff;
+	}
+#slide-wrap-2{
+	top: 0px;
+	left: 231px;
+	border-left:1px solid #fff;
+	border-right:1px solid #fff;
+	border-bottom:1px solid #fff;
+	}
+#slide-wrap-3{
+	top: 0px;
+	left: 625px;
+	border-left:1px solid #fff;
+	border-bottom:1px solid #fff;
+	}
+#slide-wrap-4{
+	top: 165px;
+	left: 0px;
+	border-top:1px solid #fff;
+	border-right:1px solid #fff;
+	}
+#slide-wrap-5{
+	top: 280px;
+	left: 231px;
+	border-left:1px solid #fff;
+	border-top:1px solid #fff;
+	border-right:1px solid #fff;
+	}
+#slide-wrap-6{
+	top: 280px;
+	left: 373px;
+	border-left:1px solid #fff;
+	border-top:1px solid #fff;
+	border-right:1px solid #fff;
+	}
+#slide-wrap-7{
+	top: 165px;
+	right: 0px;
+	border-left:1px solid #fff;
+	border-top:1px solid #fff;
+	}
+
+#slide-wrap-6 img{
+	max-height: 102%;
+	width: auto;
+	}
 
 
 
@@ -392,19 +512,80 @@ a.nivo-prevNav {
 	left: 25px;
 }
 
-.dejay_image{
-	width: 204px;
-	height: 249px;
-	margin-top: 5px;
+#container.djs #content-wrapper{
+	width: 856px;
+	margin-top: 0;
+	padding-top: 30px;
+	margin-right: 0;
+	background-image: url('images/bg-pattern.gif');
+	position: relative;
+	}
+
+#container.djs .content-main {
+	margin-left: 27px;
+	margin-right: 27px;
+	padding-bottom: 27px;
 	float: left;
+	text-align: center;
+	line-height: 10px;
+	position: relative;
+	z-index: 0;
+	}
+	#container.djs .content-main .text{
+		padding-top: 10px;
+		}
+	#container.djs .content-main .name{
+		text-transform: uppercase;
+		color: #000;
+		}
+	#container.djs .content-main span{
+		font-size: 10px;
+		font-family: "nimbus-sans-extended",sans-serif;
+		font-weight: bolder;
+		color: #186da1;
+		}
+	#container.djs .content-main span.circle{
+		width: 80px;
+		height: 80px;
+		-moz-border-radius: 40px; 
+		-webkit-border-radius: 40px; 
+		border-radius: 40px;
+		background-color: transparent;
+		display: block;
+		position: absolute;
+		left:-6px;
+		top:-1px;
+		z-index: 0;
+		}
+	#container.djs .content-main:hover span.circle{
+		background-color: #fff;
+		}
+
+.dejay_image{
+	width: 68px;
+	height: 68px;
+	margin-top: 5px;
 	overflow: hidden;
-}
+	-moz-border-radius: 34px; 
+	-webkit-border-radius: 34px; 
+	border-radius: 34px;
+	position: relative;
+	z-index: 1;
+	background-color: #186da1;
+	}
 
 .dejay_image img{
 	vertical-align: middle;
     height: 100%;
-/*	margin-left: -50%;
-*/}
+    opacity: 1;
+	filter: alpha(opacity=100);
+	}
+	#container.djs .content-main:hover .dejay_image img{
+		vertical-align: middle;
+    	height: 100%;
+	    opacity: 0.8;
+		filter: alpha(opacity=80);	
+		}
 
 .dejay_text {
 	display: block;
@@ -414,6 +595,99 @@ a.nivo-prevNav {
 .dejay_text p{
 	margin-top: 0px;
 }
+
+/*==================================================
+DEEJAY MODAL
+====================================================*/
+.dj-modal-wrap{
+	top:0;
+	left: 0;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	}
+	.dj-modal-wrap .dj-modal-container{
+		top:9px;
+		left: 9px;
+		position: absolute;
+		width: 838px;
+		height: 540px;
+		background-color: #fff;
+		z-index: 500;
+		}
+		.dj-modal-wrap .dj-modal-container .deejay_image_full{
+			width: 204px;
+			margin-left:30px;
+			margin-right:26px;
+			float: left;
+			padding-top: 35px;
+			}
+		.dj-modal-wrap .dj-modal-container .body-copy{
+			width: 522px;
+			float: left;
+			padding-top: 35px;
+			}
+			.dj-modal-wrap .dj-modal-container .body-copy .title{
+				color: #186da1;
+				font-size: 18px;
+				font-family: "nimbus-sans-extended",sans-serif;
+				font-weight: 400;
+				}
+			.dj-modal-wrap .dj-modal-container .body-copy .bio{
+				font-family: 'Droid Sans', arial, sans-serif;
+				line-height: 18px;
+				font-size: 12px;
+				color: #353433;
+				}
+			.dj-modal-wrap .dj-modal-container .body-copy .social a span{
+				display: block;
+				width:26px;
+				height: 26px;
+				margin-right: 5px;
+				float:left;
+				}
+				.dj-modal-wrap .dj-modal-container .body-copy .social a span.facebook{
+					background-image: url('images/icon-facebook.png');
+					}
+				.dj-modal-wrap .dj-modal-container .body-copy .social a span.twitter{
+					background-image: url('images/icon-twitter.png');
+					}
+				.dj-modal-wrap .dj-modal-container .body-copy .social a span.tumblr{
+					background-image: url('images/icon-tumblr.png');
+					}
+				.dj-modal-wrap .dj-modal-container .body-copy .social a span.instagram{
+					background-image: url('images/icon-instagram.png');
+					}
+		.dj-modal-wrap .dj-modal-container .close-modal{
+			position: absolute;
+			top: 0;
+			right: 0;
+			text-transform: uppercase;
+			font-size: 10px;
+			font-family: "nimbus-sans-extended",sans-serif;
+			font-weight: 400;
+			color: #186da1;
+			height: 23px;
+			line-height: 24px;
+			vertical-align: middle;
+			}
+			.dj-modal-wrap .dj-modal-container .close-modal a:link,
+			.dj-modal-wrap .dj-modal-container .close-modal a:visited,
+			.dj-modal-wrap .dj-modal-container .close-modal a:hover{
+				color: #186da1;
+				letter-spacing: 1px;
+				}
+			.dj-modal-wrap .dj-modal-container .close-modal span{
+				text-align: center;
+				display: inline-block;
+				width:23px;
+				height: 23px;
+				background-color: #186da1;
+				color: #fff;
+				margin-left: 5px;
+				}
+
+
 
 .sidebar-item-dejay {
 	margin-top: 5px;
